🐛 FIX: spacing letter title form

--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -156,7 +156,7 @@ p {
 }
 
 .title_connexion {
-    letter-spacing: 0.8px;
+    letter-spacing: 1px;
   position: relative;
   font-size: 2rem;
   margin-bottom: 15px;
